# health_tools_ui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/huskarui/: guide.metainfo.json
.github/workflows/: ci.yml  release.yml
packaging/: entrypoint.py  health_tools_ui.spec  installer.iss
scripts/: build_icon.py  build_windows.ps1  capture_app.py  project-uv.ps1  qml_smoke.py
src/health_tools_ui/: __init__.py  __main__.py  api_adapter.py  app.py  arguments.py  catalog.py  config_service.py  csv_inference.py  history.py  models.py  resources.py  results.py  rule_schema.py  rules.py  runner.py  viewmodels.py  worker.py
src/health_tools_ui/i18n/: health_tools_ui_zh_CN.ts
src/health_tools_ui/qml/: CommandPage.qml  ConfigPage.qml  FieldEditor.qml  Main.qml  ResultPreview.qml  RuleCenter.qml  RuleGenerator.qml  SettingsPage.qml  TaskDrawer.qml
src/health_tools_ui/rule_generation/: __init__.py  analysis.py  builders.py  models.py  preview.py  viewmodel.py
tests/: test_api_adapter.py  test_arguments.py  test_catalog.py  test_config_service.py  test_csv_inference.py  test_history.py  test_qml_contract.py  test_resources.py  test_results.py  test_rule_generation.py  test_rule_generator_viewmodel.py  test_rules.py  test_runner.py  test_viewmodels.py  test_worker.py
