[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-tools-ui"
version = "0.1.1"
description = "A PyHuskarUI desktop interface for ghealth-tools"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "XiaoPb" }]
dependencies = [
    "ghealth-tools==0.4.53",
    "platformdirs>=4.2,<5",
    "psutil>=6,<8",
    "pyhuskarui==0.6.1.0",
    "pyside6==6.10.1",
    "ruamel-yaml>=0.18.6,<0.19",
]

[project.scripts]
health-tools-ui = "health_tools_ui.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.11,<2",
    "pyinstaller>=6.11,<7",
    "pytest>=8.3,<9",
    "pytest-cov>=5,<7",
    "pytest-qt>=4.4,<5",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/health_tools_ui"]

[tool.hatch.build.targets.wheel.force-include]
"src/health_tools_ui/qml" = "health_tools_ui/qml"
"src/health_tools_ui/i18n" = "health_tools_ui/i18n"
"src/health_tools_ui/assets" = "health_tools_ui/assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["health_tools_ui"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".agents/skills", "build-*", "dist-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["health_tools_ui"]
ignore_missing_imports = true
